Ajout d'un texte sur word a partir d'un input

--- a/TestPiCarreWeb/Home.html
+++ b/TestPiCarreWeb/Home.html
@@ -40,14 +40,15 @@
             <p>Choose the buttons below to add boilerplate text to the document by using the Word JavaScript API.</p>
             <br />
             <h3>Try it out</h3>
-            <button id="emerson">Add quote from Ralph Waldo Emerson</button>
+            <input type="text" id="message">texte à ajouter</input>
             <br /><br />
-            <button id="checkhov">Add quote from Anton Chekhov</button>
+            <button id="ajoutTextViaInputButton">Ajout du texte</button>
             <br /><br />
-            <button id="proverb">Add Chinese proverb</button>
+            <button id="ajoutSqrtButton">Ajout Racine Carrée</button>
+            <br /><br />
+
         </div>
     </div>
     <br />
-    <div id="supportedVersion" />
 </body>
 </html>
