Amélioration de l'affichage + Suppression du clavier numérique

--- a/TestPiCarreWeb/Home.html
+++ b/TestPiCarreWeb/Home.html
@@ -36,59 +36,73 @@
         </div>
     </div>-->
     <div id="content-main">
+
+        <p>Pour écrire un opérateur mathématique à la voix, dites les mots-clés suivants : </p>
         <div class="padding">
-            <p>Pour écrire un opérateur mathématique à la voix, dites les mots-clés suivants : </p>
-            <br />
-            <h3>Déplacements</h3>
-            <div class="operator-block">
-                <input type="image" src="Images/back.png" id="plus" />
-                <br />Gauche
+
+            <div class="category">
+
+                <div class="buttons">
+                    <button class="operator-block" id="left">
+                        <img src="Images/back.png" />
+                        <br />Gauche
+                    </button>
+                    <button class="operator-block" id="right">
+                        <img src="Images/next.png" />
+                        <br />Droite
+                    </button>
+                </div>
+                <div class="titlediv">
+                    <p class="title">Position</p>
+                </div>
             </div>
-            <div class="operator-block">
-                <input type="image" src="Images/next.png" id="plus" />
-                <br />Droite
-            </div>
-            <h3>Opérateurs</h3>
-            <div class="operator-block">
-                <input type="image" src="Images/plus.png" id="plus" />
-                <br />Plus
-            </div>
-            <div class="operator-block">
-                <input type="image" src="Images/moins.png" id="moins" />
-                <br />Moins
-            </div>
-            <div class="operator-block">
-                <input type="image" src="Images/fois.png" id="fois" />
-                <br />Fois
-            </div>
-            <div class="operator-block">
-                <input type="image" src="Images/egal.png" id="egale" />
-                <br />Égale
-            </div>
-            <div class="operator-block">
-                <input type="image" src="Images/different.png" id="different" />
-                <br />Différent
-            </div>
-            <h3>Chiffres</h3>
-            <div id="content-numbers">
-                <button id="button-number">1</button>
-                <button id="button-number">2</button>
-                <button id="button-number">3</button>
-                <button id="button-number">4</button>
-                <button id="button-number">5</button>
-                <button id="button-number">6</button>
-                <button id="button-number">7</button>
-                <button id="button-number">8</button>
-                <button id="button-number">9</button>
-                <button id="button-number">0</button>
-            </div>
+            <div class="category">
 
 
+                <div class="buttons">
+                    <button class="operator-block" id="plus">
+                        <img src="Images/plus.png" />
+                        <br />Plus
+                    </button>
+                    <button class="operator-block" id="moins">
+                        <img src="Images/moins.png" />
+                        <br />Moins
+                    </button>
+                    <button class="operator-block" id="fois">
+                        <img src="Images/fois.png" />
+                        <br />Fois
+                    </button>
+                    <button class="operator-block" id="egale">
+                        <img src="Images/egal.png" />
+                        <br />Égale
+                    </button>
+                    <button class="operator-block" id="different">
+                        <img src="Images/different.png" />
+                        <br />Différent
+                    </button>
+                </div>
+                <div class="titlediv">
+                    <p class="title">Opérateur</p>
+                </div>
+            </div>
+            <!--<h3>Chiffres</h3>
+        <div id="content-numbers">
+            <button id="button-number">1</button>
+            <button id="button-number">2</button>
+            <button id="button-number">3</button>
+            <button id="button-number">4</button>
+            <button id="button-number">5</button>
+            <button id="button-number">6</button>
+            <button id="button-number">7</button>
+            <button id="button-number">8</button>
+            <button id="button-number">9</button>
+            <button id="button-number">0</button>
+        </div>-->
             <!--<button id="emerson">Add quote from Ralph Waldo Emerson</button>
-            <br /><br />
-            <button id="checkhov">Add quote from Anton Chekhov</button>
-            <br /><br />
-            <button id="proverb">Add Chinese proverb</button>-->
+        <br /><br />
+        <button id="checkhov">Add quote from Anton Chekhov</button>
+        <br /><br />
+        <button id="proverb">Add Chinese proverb</button>-->
         </div>
     </div>
     <br />
